프로젝트 구조 업데이트 및 연락처 섹션 추가

--- a/src/sections/About.module.css
+++ b/src/sections/About.module.css
@@ -38,6 +38,10 @@
   background-color: #fff;
 }
 
+.links li a:hover {
+  background-color: #d4d4d8;
+}
+
 @media (min-width: 1024px) {
   .content {
     flex-direction: row-reverse;
