--- a/src/sections/Experience.module.css
+++ b/src/sections/Experience.module.css
@@ -32,8 +32,6 @@
 
 .itemHeader {
   display: flex;
-  /* justify-content: space-between;
-  align-items: center; */
   flex-direction: column;
   gap: 15px;
   margin-bottom: 28px;
@@ -47,7 +45,7 @@
 
 .position span {
   font-weight: 400;
-  font-size: 18px;
+  font-size: clamp(18px, 3vw, 20px);
 }
 
 .organization {
@@ -55,7 +53,7 @@
   align-items: center;
   gap: 30px;
   font-weight: 600;
-  font-size: 20px;
+  font-size: clamp(20px, 3vw, 24px);
 }
 .organization img {
   display: block;
