--- a/src/sections/Projects.module.css
+++ b/src/sections/Projects.module.css
@@ -33,7 +33,7 @@
 .projectNum {
   display: block;
   color: #fff;
-  font-size: 24px;
+  font-size: clamp(24px, 3vw, 48px);
   font-weight: 800;
   letter-spacing: -0.48px;
   line-height: 1;
@@ -41,7 +41,7 @@
 
 .projectTitle {
   color: #fff;
-  font-size: 20px;
+  font-size: clamp(20px, 3vw, 32px);
   font-weight: 800;
   line-height: 1;
 }
@@ -79,13 +79,5 @@
   }
   .projectInfo {
     margin-top: 0;
-  }
-  .projectNum {
-    font-size: 48px;
-    letter-spacing: -0.96px;
-  }
-
-  .projectTitle {
-    font-size: 32px;
   }
 }
