--- a/src/sections/Skills.module.css
+++ b/src/sections/Skills.module.css
@@ -2,8 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 20px;
-  padding: 20px 0;
-  margin: 60px 0 20px;
+  margin-top: 40px;
 }
 
 .skillList li {
@@ -28,5 +27,7 @@
   .skillList {
     grid-template-columns: repeat(auto-fit, minmax(186px, 1fr));
     gap: 40px 70px;
+    padding: 20px 0;
+    margin-top: 60px;
   }
 }
