섹션에 ID 속성을 추가하고 레이아웃 스타일을 개선

--- a/src/layout/Container/Container.module.css
+++ b/src/layout/Container/Container.module.css
@@ -6,6 +6,10 @@
   background-color: #0f1115;
 }
 
+.wrap {
+  scroll-margin-top: 72px;
+}
+
 @media (min-width: 1024px) {
   .container {
     max-width: 1280px;
