--- a/src/sections/Intro.module.css
+++ b/src/sections/Intro.module.css
@@ -1,6 +1,7 @@
 .content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 48px;
 }
 
@@ -12,10 +13,6 @@
 
 .introImage {
   display: block;
-  width: 100%;
-  max-width: 630px;
-  height: auto;
-  margin: 0 auto;
 }
 
 .links {
@@ -46,6 +43,7 @@
   .content {
     flex-direction: row-reverse;
     align-items: center;
-    gap: 0;
+    gap: 30px;
+    min-height: 630px;
   }
 }
